Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50730

Custom style of the VKB does not work properly after using windeployqt.exe on the project binary

XMLWordPrintable

    • 61ac14c4d2cabc33e440bd80e3faf4b7a887e136 (qtvirtualkeyboard/5.6, 29.1.2016, 5.6)

      The user is using Windows 8.1 x64. The user created a nice looking style for the Virtual keyboard. The user did everything in exact same way as described here http://doc.qt.io/QtVirtualKeyboard/technical-guide.html#styles-and-layouts. When user is running the application from the Qt Creator, she can see, the style is displayed as it was intended. Now it is time to send the project to the end-user. However, it cannot be done, since the custom style is not properly displayed.

      Expected behaviour:
      The exact same outfit as in Qt Creator.

      What actually happens:
      Custom style is not displayed properly. See attached screen-shots.
      This screenshot vk_in_qt_creator.png shows a custom style applied to the VK 1.3 in application run from Qt Creator.
      This screenshot in_release_after_windeployqt.png shows, how does custom style displayed after windeployqt.exe was applied to the project binary.

      Steps to reproduce:

      0. VK must be compiled and installed in release mode as well as the example VK application
      1. Install style attached as described here http://doc.qt.io/QtVirtualKeyboard/technical-guide.html#styles-and-layouts (unpack test.7z under [Qt]/qml/QtQuick/Enterprise/VirtualKeyboard\Styles
      2. Run standard VK example in Qt Creator (Examples/QtVirtualKeyboard/quick/enterprise/virtualkeyboard\virtualkeyboard), set QT_VIRTUALKEYBOARD_STYLE=test
      3. Observe, everything works fine
      4. Now, use windeployqt.exe tool on project binary to create a stand-alone application package.
      5. Double-click on binary.
      6. Observe, style does not displayed properly. Background on some buttons is white instead of red, green and blue.

        1. in_release_after_windeployqt.png
          in_release_after_windeployqt.png
          145 kB
        2. test.7z
          25 kB
        3. vk_in_qt_creator.png
          vk_in_qt_creator.png
          141 kB
        4. qtbug50730_diag.diff
          3 kB
        5. qtbug50730_log.txt
          45 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            dmnikola Dmitry Nikolaev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes