Look for styles in all import paths.

The assumption that the QML import path is always last fails for the deployed
case, in which the imports are directory under the binaries.

Task-number: QTBUG-50730
Change-Id: Iea8b73d78375b6d211095fcb8ecc00e2127f4884
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>